kubernetes/apps/gatus/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gatus
  namespace: monitoring
spec:
  hostnames: ["status.mafyuh.dev"]
  parentRefs:
    - name: external
      namespace: kube-system
      sectionName: http
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: gatus
          namespace: monitoring
          port: 80
